# pygedreader

./: .gitignore  .readthedocs.yaml  README.md  cli.py  main.py  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: ancestry-quirks.md  cli.md  getting-started.md  index.md  requirements.txt
docs/api/: index.md  models.md  parser.md
models/: __init__.py  base.py  date.py  event.py  family.py  gedcom.py  header.py  individual.py  media.py  name.py  note.py  place.py  repository.py  source.py  source_citation.py  submitter.py
parser/: __init__.py  parser.py  record_parser.py  tokenizer.py  tree.py
tests/: test_custom_tags.py  test_date.py  test_family.py  test_individual.py  test_name.py  test_note.py  test_parse_file.py  test_place.py  test_references.py  test_source.py  test_tokenizer.py
