[project]
name = "pygedreader"
version = "0.1.0"
description = "A Python library for parsing GEDCOM files with Ancestry.com export support"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.12.5",
]

[project.scripts]
pygedreader = "cli:main"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
